# ferrosaur

./: .gitignore  .prettierrc.mjs  Cargo.toml  README.md  TODO.md  deno.json  release-plz.toml  tsconfig.json
.github/workflows/: ci.yml  docs.yml  release-plz.yml
crates/ferrosaur/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrosaur/examples/: compile.rs  fixture.rs
crates/ferrosaur/examples/js/: cwd.js  globals.d.ts  globals.js  iter.js  mod.js
crates/ferrosaur/src/: callable.rs  function.rs  interface.rs  iterator.rs  lib.rs  module.rs  util.rs  value.rs
crates/ferrosaur/src/interface/: func.rs  index.rs  prop.rs  set.rs
crates/ferrosaur/src/util/: flag.rs  function.rs  interface.rs  positional.rs  unary.rs  v8.rs
crates/ferrosaur/tests/: compile.rs  interface.rs  iterator.rs  modules.rs
crates/ferrosaur/tests/fixture/: mod.rs
crates/ferrosaur/tests/js/: globals.js  iter.js
crates/ferrosaur/tests/util/: mod.rs
docs/: .gitignore  Cargo.toml  book.toml
docs/app/: example.ts  main.css  main.ts
docs/preprocessors/rustdoc-link/: Cargo.toml
docs/preprocessors/rustdoc-link/src/: main.rs
docs/src/: CHANGELOG.md  README.md  SUMMARY.md  intro.md  lib.rs
docs/src/_internal/examples/calculator/: README.md
docs/src/_internal/examples/console/: README.md
docs/src/_internal/examples/fibonacci/: README.md
docs/src/examples/: README.md  calculator.md  console.md  fibonacci.md  ts-blank-space.md  ts.md
docs/src/guides/: inheritance.md  module-url.md  static-props.md
docs/src/reference/: README.md  callable.md  common-pitfalls.md  function.md  global-this.md  interface.md  iterator.md  module.md  type-conversions.md  typing.md  value.md
docs/src/reference/_snippets/: todo-list.d.ts  todo-list.js  todo-list.md
docs/src/reference/interface/: func.md  get-set.md  new.md  prop.md
docs/theme/: index.css
examples/_runtime/: Cargo.toml  README.md
examples/_runtime/src/: globals.d.ts  globals.js  globals.rs  lib.js  lib.rs  lib.ts
examples/calculator/: Cargo.toml  README.md
examples/calculator/src/: main.js  main.rs
examples/console/: Cargo.toml  README.md
examples/console/src/: main.rs
examples/fibonacci/: Cargo.toml  README.md
examples/fibonacci/src/: lib.js  main.rs
examples/ts/: Cargo.toml  README.md  build.js  build.rs  build.ts
examples/ts-blank-space/: Cargo.toml  README.md  build.js  build.rs  build.ts
examples/ts-blank-space/src/: main.rs  main.ts
examples/ts-blank-space/tests/snapshots/: main.snap
examples/ts/src/: globals.ts  lib.rs  lib.ts  main.rs  main.ts  typescript.ts
examples/typescript/: Cargo.toml  build.js  build.rs
examples/typescript/src/: globals.ts  main.ts
src/: fast_string.rs  function.rs  global_this.rs  interface.rs  iterator.rs  lib.rs  module.rs  newtype.rs  properties.rs  tpl.rs  util.rs  value.rs
src/interface/: func.rs  get.rs  prop.rs  set.rs
src/properties/: func.rs  function.rs  get.rs  prop.rs  property.rs  set.rs
src/util/: bind_function.rs  bound_func.rs  call_function.rs  feature.rs  flag_like.rs  function.rs  inferred_type.rs  interface.rs  interface_like.rs  positional.rs  property_key.rs  string_like.rs  tpl.rs  type_cast.rs  v8.rs  v8_conv.rs  v8_conv_impl.rs
tests/: compile.rs  func.rs  function.rs  interface.rs  iterator.rs  main.js  main.rs  modules.rs  properties.rs  usage.rs
tests/fixture/: deno.rs  mod.rs
tests/fixture/js/: globals.d.ts  globals.js  mod.js
tests/js/: cwd.js  globals.d.ts  globals.js  i18n.js  mod.js  pkg.js
tests/modules/: global.rs  i18n.js  i18n.rs  iter.rs  mod.js  mod.rs
tests/snapshots/: func__variadic_fn.snap
tests/snapshots/interface/: callback.snap  variadic_fn.snap
tests/snapshots/properties/: callback.snap  variadic_fn.snap
tests/util/: deno.rs  mod.rs
utils/cargo-bin/: Cargo.toml
utils/mdbook-socials/: Cargo.toml
