[package]
authors = ["Tony Wu <tonywu6@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ferrosaur"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
heck = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
tap = "1.0.1"

[dev-dependencies]
anyhow = "1.0.95"
deno_console = "=0.192.0"
deno_core = "=0.338.0"
deno_url = "=0.192.0"
deno_web = "=0.223.0"
deno_webidl = "=0.192.0"
insta = { version = "1.40.0", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1", features = ["macros"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
