[workspace.package]
authors = ["Tony Wu <tonywu6@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tonywu6/ferrosaur"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace]
default-members = ["crates/*"]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
ferrosaur = { path = "crates/ferrosaur" }
insta = { version = "1.40.0", features = ["yaml"] }
proc-macro2 = "1.0.93"
quote = "1.0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.139"
syn = "2.0.98"
tap = "1.0.1"
tokio = { version = "1", features = ["macros"] }

deno_console = "=0.193.0"
deno_core = "=0.338.0"
deno_runtime = "=0.192.0"
deno_url = "=0.193.0"
deno_web = "=0.224.0"
deno_webidl = "=0.193.0"
