[package]
name = "ferrosaur-docs"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
deno_runtime = { workspace = true }
ferrosaur = { workspace = true }
heck = "0.5.0"
