[package]
name = "ferrosaur"
publish = true
readme = "../../README.md"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
heck = "0.5.0"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
tap = { workspace = true }

# only for docs
deno_core = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
deno_console = { workspace = true }
deno_core = { workspace = true }
deno_url = { workspace = true }
deno_web = { workspace = true }
deno_webidl = { workspace = true }
insta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[features]
_unstable-docs = ["dep:deno_core"]

[package.metadata.docs.rs]
features = ["_unstable-docs"]
