[package]
name = "ferrosaur"
publish = true
version = "0.1.0"

edition.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

categories = ["development-tools::ffi", "web-programming"]
description = "Static codegen for deno_core. 🦀📲🦕"
documentation = "https://tonywu6.github.io/ferrosaur/"
keywords = ["deno", "v8", "javascript"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
heck = "0.5.0"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
tap = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
deno_console = { workspace = true }
deno_core = { workspace = true }
deno_url = { workspace = true }
deno_web = { workspace = true }
deno_webidl = { workspace = true }
insta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
