[package]
name = "ferrosaur"
publish = true
version = "0.1.0"

edition.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

categories = ["development-tools::ffi", "web-programming"]
description = "Static codegen for deno_core. 🦀📲🦕"
homepage = "https://tonywu6.github.io/ferrosaur/"
keywords = ["deno", "v8", "javascript"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
tap = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
deno_core = { workspace = true }
example-runtime = { path = "../../examples/_runtime" }
insta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
