[package]
name = "example-console"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
example-runtime = { path = "../_runtime" }
ferrosaur = { workspace = true }
tokio = { workspace = true }
