[package]
name = "example-fibonacci"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
deno_core = { workspace = true }
ferrosaur = { workspace = true }
tokio = { workspace = true }
