[package]
name = "example-ts-blank-space"
publish = false
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bat = { version = "0.24.0", features = [
  "regex-fancy",
], default-features = false }
example-runtime = { path = "../_runtime" }
ferrosaur = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
