[package]
name = "example-ts-blank-space"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
bat = { version = "0.24.0", features = [
  "regex-fancy",
], default-features = false }
example-runtime = { path = "../_runtime" }
example-ts = { path = "../ts" }
ferrosaur = { workspace = true }
insta = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
