[package]
name = "example-ts"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
example-runtime = { path = "../_runtime" }
ferrosaur = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
