[package]
name = "cargo-bin"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
cargo-run-bin = { version = "1.7.4", features = [
  "cli",
], default-features = false }
