[package]
name = "mdbook-rustdoc-link"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.97"
async-lsp = "0.2.2"
cargo_toml = "0.21.0"
clap = { version = "4.5.31", features = ["derive"] }
lsp-types = "0.95.0"
mdbook = { version = "0.4.46", default-features = false }
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"
quote = "1.0.39"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.99"
tap = "1.0.1"
tokio = { version = "1.44.0", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "time",
] }
tokio-util = { version = "0.7.13", features = ["compat"] }
toml = "0.5"
tower = "0.5.2"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
